# Delfina

./: CMakeLists.txt  README.md  plot.py
ODE/adambashforth/: main.cpp  notes.txt
ODE/rungekutta/: main  main.cpp  output.csv  rungekutta.cpp  rungekutta.hpp
src/: main.cpp
src/ODE/: .rungekutta.hpp.swp  README.md  rungekutta.cpp  rungekutta.hpp  solver.cpp  solver.hpp  utilities.hpp
